Fix z-index on navigation and search

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -537,6 +537,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 40;
 }
 
+.z-30 {
+  z-index: 30;
+}
+
 .m-1 {
   margin: 0.25rem;
 }
